--- a/_site.yml
+++ b/_site.yml
@@ -4,6 +4,14 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+    - text: "Data Stories"
+      menu:
+      - text: "Page 1"
+        href: DS1.html
+      - text: "Page 2"
+        href: DS2.html
+    - text: "Bio"
+      href: bio.html
     - text: "Journal"
       href: Journal.html
     - text: "Links"
